# picom-xrdesktop-companion

./: .gitmodules  Cargo.toml  README.md
app/: Cargo.toml  build.rs  import.h
app/src/: gl.rs  input.rs  main.rs  picom.rs  setup.rs  utils.rs
data/: org.xrdesktop.settings.gresource
g3k/: Cargo.toml  Gir.toml
g3k/sys/: Cargo.toml  Gir.toml
g3k/sys/src/: lib.rs
g3k/sys/tests/: abi.rs  constant.c  layout.c  manual.h
gulkan/: Cargo.toml  Gir.toml
gulkan/src/: lib.rs
gulkan/src/auto/: client.rs  mod.rs  texture.rs
gulkan/sys/: Cargo.toml  Gir.toml  build.rs
gulkan/sys/gulkan/: .clang-format  .gitignore  .gitlab-ci.yml  LICENSE  README.md  meson.build
gulkan/sys/gulkan/src/: gulkan-buffer.c  gulkan-buffer.h  gulkan-client.c  gulkan-client.h  gulkan-cmd-buffer-private.h  gulkan-cmd-buffer.c  gulkan-cmd-buffer.h  gulkan-descriptor-pool.c  gulkan-descriptor-pool.h  gulkan-device.c  gulkan-device.h  gulkan-frame-buffer.c  gulkan-frame-buffer.h  gulkan-geometry.c  gulkan-geometry.h  gulkan-instance.c  gulkan-instance.h  gulkan-queue.c  gulkan-queue.h  gulkan-render-pass.c  gulkan-render-pass.h  gulkan-renderer.c  gulkan-renderer.h  gulkan-swapchain-renderer.c  gulkan-swapchain-renderer.h  gulkan-swapchain.c  gulkan-swapchain.h  gulkan-texture.c  gulkan-texture.h  gulkan-uniform-buffer.c  gulkan-uniform-buffer.h  gulkan-version.h.in  gulkan-vertex-buffer.c  gulkan-vertex-buffer.h  gulkan.h  meson.build
gulkan/sys/src/: lib.rs
gulkan/sys/tests/: abi.rs  constant.c  layout.c  manual.h
gxr/: Cargo.toml  Gir.toml
gxr/src/: lib.rs
gxr/src/auto/: context.rs  controller.rs  mod.rs
gxr/sys/: Cargo.toml  Gir.toml  build.rs
gxr/sys/gxr/: .clang-format  .gitignore  .gitlab-ci.yml  LICENSE  README.md  meson.build  meson_options.txt
gxr/sys/gxr/src/: graphene-ext.c  graphene-ext.h  gxr-action-set.c  gxr-action-set.h  gxr-action.c  gxr-action.h  gxr-backend-private.h  gxr-backend.c  gxr-backend.h  gxr-context-private.h  gxr-context.c  gxr-context.h  gxr-controller.c  gxr-controller.h  gxr-device-manager.c  gxr-device-manager.h  gxr-device.c  gxr-device.h  gxr-enums.h  gxr-io.c  gxr-io.h  gxr-manifest.c  gxr-manifest.h  gxr-model.c  gxr-model.h  gxr-overlay-private.h  gxr-overlay.c  gxr-overlay.h  gxr-pointer-tip.c  gxr-pointer-tip.h  gxr-pointer.c  gxr-pointer.h  gxr-time.c  gxr-time.h  gxr-types.h  gxr-version.h.in  gxr.h  meson.build
gxr/sys/gxr/src/openvr/: openvr-action-set.c  openvr-action-set.h  openvr-action.c  openvr-action.h  openvr-compositor.c  openvr-compositor.h  openvr-context.c  openvr-context.h  openvr-functions.c  openvr-functions.h  openvr-math.c  openvr-math.h  openvr-model.c  openvr-model.h  openvr-overlay.c  openvr-overlay.h  openvr-system.c  openvr-system.h  openvr-wrapper.h
gxr/sys/gxr/src/openxr/: openxr-action-set.c  openxr-action-set.h  openxr-action.c  openxr-action.h  openxr-context.c  openxr-context.h  openxr-overlay.c  openxr-overlay.h
gxr/sys/gxr/valgrind/: run.sh
gxr/sys/gxr/valgrind/suppressions/: glib.supp  mesa.supp  misc.supp  openvr.supp
gxr/sys/src/: lib.rs
gxr/sys/tests/: abi.rs  constant.c  layout.c  manual.h
xrd/: Cargo.toml  Gir.toml  comments.md  generate.sh
xrd-gir-files/: G3k-0.16.gir  Gulkan-0.15.gir  Gulkan-0.16.gir  Gxr-0.15.gir  Gxr-0.16.gir  Json-1.0.gir  Xrd-0.15.gir  Xrd-0.16.gir
xrd/src/: lib.rs
xrd/src/auto/: client.rs  container.rs  desktop_cursor.rs  enums.rs  functions.rs  input_synth.rs  mod.rs  window.rs  window_manager.rs
xrd/sys/: Cargo.toml  Gir.toml  build.rs
xrd/sys/src/: lib.rs
xrd/sys/tests/: abi.rs  constant.c  layout.c  manual.h
xrd/sys/xrdesktop/: .gitignore  .gitlab-ci.yml  README.md  meson.build  meson_options.txt
xrd/sys/xrdesktop/res/: bindings.gresource.xml  meson.build  org.xrdesktop.gschema.xml  tests.gresource.xml
xrd/sys/xrdesktop/res/bindings/openvr/: actions.json  bindings_knuckles_controller.json  bindings_vive_controller.json  example_model_actions.json  example_model_bindings_vive_controller.json
xrd/sys/xrdesktop/res/bindings/openxr/: actions.json  bindings_htc_vive_controller.json  bindings_khronos_simple_controller.json  bindings_valve_index_controller.json
xrd/sys/xrdesktop/res/icons/: icons.gresource.xml  meson.build
xrd/sys/xrdesktop/settings/: config.py.in  meson.build  org.xrdesktop.settings.desktop  xrd-settings  xrd-settings.gresource.xml  xrd-settings.ui
xrd/sys/xrdesktop/shaders/: device_model.frag  device_model.vert  meson.build  pointer.frag  pointer.vert  shaders.gresource.xml  window.frag  window.vert
xrd/sys/xrdesktop/src/: meson.build  xrd-button.c  xrd-button.h  xrd-client-private.h  xrd-client.c  xrd-client.h  xrd-container.c  xrd-container.h  xrd-desktop-cursor.c  xrd-desktop-cursor.h  xrd-enums.h  xrd-input-synth.c  xrd-input-synth.h  xrd-math.c  xrd-math.h  xrd-render-lock.c  xrd-render-lock.h  xrd-settings.c  xrd-settings.h  xrd-shake-compensator.c  xrd-shake-compensator.h  xrd-types.h  xrd-version.h.in  xrd-window-manager.c  xrd-window-manager.h  xrd-window.c  xrd-window.h  xrd.h
xrd/sys/xrdesktop/src/overlay/: meson.build  xrd-overlay-client-private.h  xrd-overlay-client.c  xrd-overlay-client.h  xrd-overlay-desktop-cursor.c  xrd-overlay-desktop-cursor.h  xrd-overlay-pointer-tip.c  xrd-overlay-pointer-tip.h  xrd-overlay-pointer.c  xrd-overlay-pointer.h  xrd-overlay-window-private.h  xrd-overlay-window.c  xrd-overlay-window.h
xrd/sys/xrdesktop/src/scene/: meson.build  xrd-scene-background.c  xrd-scene-background.h  xrd-scene-client-private.h  xrd-scene-client.c  xrd-scene-client.h  xrd-scene-desktop-cursor.c  xrd-scene-desktop-cursor.h  xrd-scene-model.c  xrd-scene-model.h  xrd-scene-object.c  xrd-scene-object.h  xrd-scene-pointer-tip.c  xrd-scene-pointer-tip.h  xrd-scene-pointer.c  xrd-scene-pointer.h  xrd-scene-renderer.c  xrd-scene-renderer.h  xrd-scene-selection.c  xrd-scene-selection.h  xrd-scene-window-private.h  xrd-scene-window.c  xrd-scene-window.h
