[package]
name = "picom-xrdesktop-companion"
version = "0.1.0"
edition = "2021"
build = "build.rs"


[dependencies]
env_logger = "0.10.0"
log = "0.4.14"
gio = { git = "https://github.com/gtk-rs/gtk-rs-core" }
glib = { git = "https://github.com/gtk-rs/gtk-rs-core" }
glib-sys = { git = "https://github.com/gtk-rs/gtk-rs-core" }
gobject-sys = { git = "https://github.com/gtk-rs/gtk-rs-core" }
xrd = { path = "../xrd" }
gxr = { path = "../gxr" }
zbus = { version = "3.11.1", features = ["xml"] }
async-io = "1.6.0"
futures = "0.3.19"
glium = "0.32"
gulkan = { path = "../gulkan" }
x11rb = { version = "0.11.1", features = [ "composite", "randr", "damage" ] }
thiserror = "1.0.30"
anyhow = "1.0.53"
parse_int = "0.6.0"
tokio = { version = "1.16.1", features = ["rt-multi-thread", "macros", "sync"] }
glutin_glx_sys = "0.4.0"
libloading = "0.7.3"
libc = "0.2.116"
graphene = { package = "graphene-rs", git = "https://github.com/gtk-rs/gtk-rs-core" }
paste = "1.0.6"
ash = "0.37.0"
renderdoc = "0.11.0"
lazy_static = "1.4.0"
gdk-pixbuf = { git = "https://github.com/gtk-rs/gtk-rs-core" }
gdk = { git = "https://github.com/gtk-rs/gtk3-rs" }
drop_bomb = "0.1.5"
next-gen = "0.1.1"
inputsynth = "0.1.1"
input = "0.8.2"

[build-dependencies]
bindgen = "0.64.0"
pkg-config = "0.3.24"
gl_generator = "0.14.0"

[features]
