[package]
name = "g3k"
version = "0.16.0"
authors = ["Yuxuan Shui <yshuiv7@gmail.com>"]
edition = "2021"

[dependencies]
graphene = { package = "graphene-rs", git = "https://github.com/gtk-rs/gtk-rs-core" }
glib = { git = "https://github.com/gtk-rs/gtk-rs-core" }
gio = { git = "https://github.com/gtk-rs/gtk-rs-core" }
gdk = { git = "https://github.com/gtk-rs/gtk3-rs" }
ffi = { package = "g3k-sys", path = "sys" }
gulkan = { path = "../gulkan" }
libc = "0.2"
