[package]
name = "gulkan"
version = "0.16.0"
authors = ["Yuxuan Shui <yshuiv7@gmail.com>"]
edition = "2021"

[dependencies]
graphene = { package = "graphene-rs", git = "https://github.com/gtk-rs/gtk-rs-core" }
glib = { git = "https://github.com/gtk-rs/gtk-rs-core" }
ffi = { package = "gulkan-sys", path = "sys" }
gxr = { path = "../gxr" }
vulkan-sys = "0.1.1"
