[package]
name = "xrd"
version = "0.15.0"
authors = ["Yuxuan Shui <yshuiv7@gmail.com>"]
edition = "2021"

[dependencies]
graphene = { package = "graphene-rs", git = "https://github.com/gtk-rs/gtk-rs-core" }
glib = { git = "https://github.com/gtk-rs/gtk-rs-core" }
gio = { git = "https://github.com/gtk-rs/gtk-rs-core" }
gdk = { git = "https://github.com/gtk-rs/gtk3-rs" }
ffi = { package = "xrd-sys", path = "sys" }
gxr = { path = "../gxr" }
gulkan = { path = "../gulkan" }
