[package]
name = "gulkan-sys"
authors = ["Yuxuan Shui <yshuiv7@gmail.com>"]
build = "build.rs"
version = "0.15.0"
edition = "2021"
links = "gulkan-0.15"

[package.metadata.docs.rs]
features = ["dox"]

[lib]
name = "gulkan_sys"

[dependencies]
libc = "0.2"

[dependencies.glib]
package = "glib-sys"
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.gdk-pixbuf]
package = "gdk-pixbuf-sys"
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.cairo]
package = "cairo-sys-rs"
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.vulkan]
package = "vulkan-sys"
version = "0"

[dependencies.graphene]
package = "graphene-sys"
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.gobject]
package = "gobject-sys"
git = "https://github.com/gtk-rs/gtk-rs-core"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
dox = ["glib/dox", "gobject/dox", "graphene/dox", "cairo/dox", "gdk-pixbuf/dox"]
